leptos_macro/tests/ui/view/component_with_props_without_macro.rs
use leptos::*;

#[allow(unused, non_snake_case)]
fn Component(prop: i32) -> impl IntoView {
    _ = prop;
}

fn main() {
    view! {
        <Component />
    };
}
